--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@ body {
     align-items: center;
     font-family: Dela Gothic One;
     color: #474747;
+    font-size: 16px;
 }
 
 
 .content {
+    z-index: 10;
     width: 1100px;
     height: 500px;
     display: flex;
@@ -25,6 +27,11 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
+.numbers:first-child {
+    align-items: flex-end;
+}
+
 .numbers * {
     width: 300px;
 }
@@ -32,12 +39,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 26px;
 }
-
 .couple_lesson, .end_couple {
     text-align: right;
 }
 
 .time {
-    font-size: 90px;
+    font-size: 120px;
 }
